; ModuleID = '/home/carl/AnghaBench/openssl/crypto/err/extr_err.c_ERR_load_strings_const.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/err/extr_err.c_ERR_load_strings_const.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ERR_load_strings_const(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = call i64 (...) @ERR_load_ERR_strings()
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @err_load_strings(i32* %8)
  store i32 1, i32* %2, align 4
  br label %10

10:                                               ; preds = %7, %6
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}

declare dso_local i64 @ERR_load_ERR_strings(...) #1

declare dso_local i32 @err_load_strings(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
